Added borrrower listing API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
   </button>
 </mat-toolbar>
 <div class="h-100">
-  <div class="loader">
-    <mat-spinner *ngIf="loader"></mat-spinner>
+  <div class="loader" *ngIf="loader">
+    <mat-spinner></mat-spinner>
   </div>
   <router-outlet *ngIf="!isIframe && !loader"></router-outlet>
 </div>
