--- a/src/app/borrow-details/borrow-details.component.css
+++ b/src/app/borrow-details/borrow-details.component.css
@@ -149,3 +149,43 @@
   width: 20px !important;
   height: 20px !important;
 }
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader-backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity or color as desired */
+}
+
+.loader-spinner {
+  position: relative;
+}
+.container-loader-overlay {
+  position: sticky;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  /* filter: blur(8px); */
+  /* -webkit-filter: blur(8px); */
+}
+.container-loader-backdrop {
+  position: absolute;
+  transform: translate(-50px, -50px);
+  left: 50%;
+  top: 50%;
+}
