--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,35 +1,76 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!-- Position Column -->
-  <ng-container matColumnDef="userId">
-    <th mat-header-cell *matHeaderCellDef>UserId</th>
-    <td
-      mat-cell
-      *matCellDef="let element"
-      class="pointer"
-      [routerLink]="['/borrowDetails', element.userId]"
-    >
-      <button mat-button color="primary">{{ element.userId }}</button>
-    </td>
-  </ng-container>
+<div>
+  <!-- <div class="example-header">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
+    </mat-form-field>
+  </div> -->
+    <!-- <div class="loader" *ngIf="!loader">
+      <mat-spinner></mat-spinner>
+    </div> -->
+    <!-- <div class="loader-overlay" *ngIf="!loader">
+      <div class="loader-backdrop"></div>
+      <mat-progress-spinner class="loader-spinner" color="primary" mode="indeterminate"></mat-progress-spinner>
+    </div> -->
+    <ng-container *ngIf="loader">
+      <app-loader></app-loader>
+    </ng-container>
+  <table mat-table [dataSource]="borrowerList" class="mat-elevation-z8">
+    <!-- Position Column -->
+    <ng-container matColumnDef="ceDealId">
+      <th mat-header-cell *matHeaderCellDef>ceDealId</th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        class="pointer"
+        [routerLink]="['/borrowDetails', element.ceDealId]"
+      >
+        <button mat-button color="primary">{{ element.ceDealId }}</button>
+      </td>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef>First Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
-  </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
+    </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Last Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
-  </ng-container>
+    <!-- Weight Column -->
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef>Last Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+    </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="creationDate">
-    <th mat-header-cell *matHeaderCellDef>Creation Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.creationDate }}</td>
-  </ng-container>
+    <ng-container matColumnDef="businessName">
+      <th mat-header-cell *matHeaderCellDef>Business Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.businessName }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <ng-container matColumnDef="dataAssociate">
+      <th mat-header-cell *matHeaderCellDef>Data Associate</th>
+      <td mat-cell *matCellDef="let element">{{ element.dataAssociate }}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="creationTime">
+      <th mat-header-cell *matHeaderCellDef>Creation Date</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.creationTime | date : "medium" }}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="3">No data found</td>
+    </tr>
+  </table>
+  <mat-paginator
+    [pageSizeOptions]="pageSizeOptions"
+    [showFirstLastButtons]="false"
+    (page)="handlePageEvent($event)"
+    [pageSize]="pageSize"
+    [length]="totalDataCount"
+    aria-label="Select page of periodic elements"
+  >
+  </mat-paginator>
+</div>
