--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,27 @@ img { width: 100%; }
 .primary{
     background: #F2A000;
 }
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  .loader-backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity or color as desired */
+  }
+  
+  .loader-spinner {
+    position: relative;
+  }
