--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,9 +5,9 @@
           <span class="signInText">Sign in to continue</span>
         </div>
         <div class="d-flex justify-content-center mt-4">
-          <button class="signInButton" (click)="login()">
+          <button class="signInButton mb-5" (click)="login()">
             Login with Microsoft &nbsp;<img
-              src="../../assets/image/microsoft.svg"
+              src="../../assets/image/microsoftlogolg.svg"
               class="iconImg"
               alt="Microsft Icon"
             />
