--- a/src/app/borrow-details/borrow-details.component.css
+++ b/src/app/borrow-details/borrow-details.component.css
@@ -180,12 +180,28 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 9999;
-  /* filter: blur(8px); */
-  /* -webkit-filter: blur(8px); */
 }
 .container-loader-backdrop {
   position: absolute;
   transform: translate(-50px, -50px);
   left: 50%;
   top: 50%;
+}
+
+.btnColor {
+  background: #F2A000 !important;
+ }
+
+ .cancelBtnColor {
+  background: #e94c28 !important;
+  color: #ffff;
+  margin-left: 20px;
+ }
+ .scrolable-item {
+  height: 500px;
+  overflow: auto;
+}
+.list-dc {
+  height: 172px;
+  overflow: auto;
 }
