--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,28 @@
-<div>
-  <!-- <div class="example-header">
+<div class="container-fluid">
+  <div class="example-header d-flex justify-content-between">
     <mat-form-field>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search" />
     </mat-form-field>
-  </div> -->
-    <!-- <div class="loader" *ngIf="!loader">
+    <div>
+      <mat-form-field class="">
+        <mat-select placeholder="Select Associate" (selectionChange)="filterByDataAssociate($event)">
+          <mat-option *ngFor="let option of dataAssociate" [value]="option">{{
+            option
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <!-- <div class="loader" *ngIf="!loader">
       <mat-spinner></mat-spinner>
     </div> -->
-    <!-- <div class="loader-overlay" *ngIf="!loader">
+  <!-- <div class="loader-overlay" *ngIf="!loader">
       <div class="loader-backdrop"></div>
       <mat-progress-spinner class="loader-spinner" color="primary" mode="indeterminate"></mat-progress-spinner>
     </div> -->
-    <ng-container *ngIf="loader">
-      <app-loader></app-loader>
-    </ng-container>
+  <ng-container *ngIf="loader">
+    <app-loader></app-loader>
+  </ng-container>
   <table mat-table [dataSource]="borrowerList" class="mat-elevation-z8">
     <!-- Position Column -->
     <ng-container matColumnDef="ceDealId">
