--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,36 +1,82 @@
 .signInBox {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    width: 756px;
-    height: 366px;
+  position: absolute;
+  width: 660px;
+  background: #ffffff;
+  box-shadow: 0px 0px 26px rgba(149, 142, 142, 0.25);
+  border-radius: 14px;
+  padding: 20px 50px;
+}
+
+.signInText {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 38px;
+  color: #2c2c2c;
+}
+
+.signInButton {
+  background-color: #ff5D17;
+  border-radius: 6px;
+  color: #ffff;
+  border: none;
+  width: 100%;
+  margin-top: 40px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  padding: 10px 0px;
+  margin-bottom: 80px !important;
+}
+
+.iconImg {
+  width: 25px;
+  height: 25px;
+}
+@media screen and (max-width: 767px) {
+  .signInBox {
+    position: absolute;
+    width: 390px;
+    background: #ffffff;
+    box-shadow: 0px 0px 26px rgba(149, 142, 142, 0.25);
     border-radius: 14px;
+    padding: 20px 50px;
+    height: 255px;
   }
-  
-  .signInText {
-      font-family: 'Poppins';
-      font-style: normal;
-      font-weight: 600;
-      font-size: 25px;
-      line-height: 38px;    
-      color: #2C2C2C;
-  }
-  
   .signInButton {
-    background-color: #ff5d17;
+    background-color: #ff5D17;
+    font-size: 15px;
+    line-height: 30px;
+    padding: 10px 0px;
+    /* margin-bottom: 80px !important; */
+  }
+}
+
+@media screen and (max-width: 376px)
+ {
+  .signInButton {
+    background-color: #ff5D17;
     border-radius: 6px;
     color: #ffff;
     border: none;
-    width: 616px;
-    height: 60px;
-    margin-top: 40px;
+    margin-top: 10px !important;
+    width: 100%;
     font-family: "Poppins";
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 30px;
+    padding: 10px 0px;
   }
-  
-  .iconImg {
-      width: 25px;
-      height: 25px;
-  }
-  
+  .signInBox {
+    width: 300px;
+    padding: 20px 50px;
+    height: 200px;
+}
+.signInText[_ngcontent-dbl-c168] {
+  font-size: 20px;
+}
+}
