--- a/src/app/borrow-details/borrow-details.component.html
+++ b/src/app/borrow-details/borrow-details.component.html
@@ -1,4 +1,4 @@
-<div class="my-4">
+<div class="my-4 matselect-shown">
   <ng-container *ngIf="loader">
     <app-loader></app-loader>
   </ng-container>
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
-          <div class="h-100">
+          <div class="h-100 mt-3">
             <h1 class="mb-4">Documents Uploaded</h1>
             <div
               class="first-column p-3 docsheight position-relative"
@@ -109,7 +109,7 @@
         </div>
 
         <div class="col-md-6">
-          <div class="h-100">
+          <div class="h-100 mt-3">
             <div class="d-flex justify-content-between">
               <h1 class="mb-3">Borrower Details</h1>
               <div *ngIf="!isEditForm">
@@ -122,14 +122,22 @@
                   &nbsp; Edit &nbsp;<mat-icon>edit</mat-icon>
                 </button>
               </div>
-              <div *ngIf="isEditForm">
+              <div class="d-flex align-items-center" *ngIf="isEditForm">
                 <button
                   mat-raised-button
                   color="primary"
                   class="btnColor"
                   (click)="saveFormField()"
+                  [ngClass]="saveButtonLoader ? 'disable' : ''"
+                  [disabled]="saveButtonLoader"
                 >
-                  &nbsp; Save &nbsp;
+                  <span *ngIf="!saveButtonLoader"> Save</span>
+                  <span class="lod" *ngIf="saveButtonLoader">
+                    <mat-progress-spinner
+                      diameter="20"
+                      mode="indeterminate"
+                    ></mat-progress-spinner>
+                  </span>
                 </button>
                 <button
                   mat-button
@@ -149,7 +157,6 @@
                         <mat-label>First Name</mat-label>
                         <input matInput formControlName="firstName" />
                       </mat-form-field>
-                      <!-- <span>*First Name is required</span> -->
                     </div>
                     <div class="col-md-6">
                       <mat-form-field>
@@ -181,7 +188,6 @@
                     <div class="col-md-6">
                       <mat-form-field>
                         <mat-label>Loan Product</mat-label>
-                        <!-- <input matInput formControlName="loanProduct" /> -->
                         <mat-select formControlName="loanProduct">
                           <mat-option
                             *ngFor="
@@ -197,7 +203,6 @@
                     <div class="col-md-6">
                       <mat-form-field>
                         <mat-label>Call Mode</mat-label>
-                        <!-- <input matInput formControlName="callMode" /> -->
                         <mat-select formControlName="callMode">
                           <mat-option
                             *ngFor="
@@ -219,7 +224,6 @@
                     <div class="col-md-6">
                       <mat-form-field>
                         <mat-label>kind Of Loan</mat-label>
-                        <!-- <input matInput formControlName="kindOfLoan" /> -->
                         <mat-select formControlName="kindOfLoan">
                           <mat-option
                             *ngFor="
@@ -235,7 +239,6 @@
                     <div class="col-md-6">
                       <mat-form-field>
                         <mat-label>Is Business GST Registered</mat-label>
-                        <!-- <input matInput formControlName="isBusinessGSTRegistered"/> -->
                         <mat-select formControlName="isBusinessGSTRegistered">
                           <mat-option
                             *ngFor="
@@ -257,7 +260,6 @@
                     <div class="col-md-6">
                       <mat-form-field>
                         <mat-label>Business Type</mat-label>
-                        <!-- <input matInput formControlName="businessType" /> -->
                         <mat-select formControlName="businessType">
                           <mat-option
                             *ngFor="
@@ -291,18 +293,12 @@
                           formControlName="dateOfBirth"
                           placeholder="MM/DD/YYYY"
                         />
-                        <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
                         <mat-datepicker-toggle
                           matSuffix
                           [for]="picker"
                         ></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                       </mat-form-field>
-
-                      <!-- <mat-form-field>
-                        <mat-label>DOB</mat-label>
-                        <input matInput formControlName="dateOfBirth" />
-                      </mat-form-field> -->
                     </div>
                     <div class="col-md-6">
                       <mat-form-field>
@@ -392,110 +388,136 @@
                 </form>
               </div>
             </div>
-            <div>
-              <div class="mt-3">
-                <h1>Type of Document</h1>
-                <div class="second-column mt-3 p-3">
-                  <div class="dropdwon mb-3">
-                    <div>
-                      <span>Type of Document</span>
-                      <mat-form-field>
-                        <!-- <mat-label>Select Category:</mat-label> -->
-                        <mat-select
-                          [formControl]="typeOfDocument"
-                          multiple
-                          (selectionChange)="onItemSelected($event)"
-                        >
-                          <mat-select-trigger>
-                            <mat-chip-list>
-                              <mat-chip
-                                *ngFor="let category of typeOfDocument.value"
-                                [removable]="true"
-                                (removed)="onRemovedTypDocument(category)"
-                                selected
-                              >
-                                {{ category }}
-                                <mat-icon matChipRemove>cancel</mat-icon>
-                              </mat-chip>
-                            </mat-chip-list>
-                          </mat-select-trigger>
+            <!-- <div> -->
+            <div class="mt-3">
+              <h1>Type of Document</h1>
+              <div class="second-column mt-3 p-3">
+                <div class="dropdwon mb-3">
+                  <div>
+                    <mat-form-field class="multi-chips">
+                      <mat-label>Select Document</mat-label>
+                      <mat-select
+                        [formControl]="typeOfDocument"
+                        multiple
+                        (selectionChange)="onItemSelected($event)"
+                        [disabled]="disableOnNoDocument"
+                      >
+                        <mat-select-trigger>
+                          <mat-chip-list>
+                            <mat-chip
+                              *ngFor="let category of typeOfDocument.value"
+                              [removable]="true"
+                              (removed)="onRemovedTypDocument(category)"
+                              selected
+                            >
+                              {{ category }}
+                              <mat-icon matChipRemove>cancel</mat-icon>
+                            </mat-chip>
+                          </mat-chip-list>
+                        </mat-select-trigger>
 
-                          <mat-option
-                            *ngFor="let doc of documentWithErrorList"
-                            [value]="doc.documentCategory"
-                          >
-                            {{ doc.documentCategory }}
-                          </mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="mt-4 p-3 third-column">
-                  <div class="document">
-                    <div class="list-dc">
-                      <ng-container
-                        *ngIf="dataAccordingToDocument.inputFields.length === 0"
-                      >
-                        <div
-                          class="d-flex justify-content-center align-items-center h-100 noInput"
+                        <mat-option
+                          *ngFor="let doc of documentWithErrorList"
+                          [value]="doc.documentCategory"
                         >
-                          <p>Please select at least one document</p>
-                        </div>
-                      </ng-container>
-                      <ng-container
-                        *ngIf="dataAccordingToDocument.inputFields.length > 0"
-                      >
-                        <ng-container
-                          *ngFor="
-                            let input of dataAccordingToDocument.inputFields
-                          "
-                        ><form [formGroup]="dynamicInputForm">
-                          <div class="">
-                            <ng-container *ngIf="input.type === 'text'">
-                              <mat-form-field class="w-100">
-                                <mat-label>{{ input.name }}</mat-label>
-                                <input matInput [type]="input.type" [formControlName]="input.key" />
-                              </mat-form-field>
-                            </ng-container>
-                            <ng-container *ngIf="input.type === 'Date'">
-                              <mat-form-field class="w-100">
-                                <mat-label>{{ input.name }}</mat-label>
-                                <input
-                                  matInput
-                                  [matDatepicker]="picker"
-                                  placeholder="MM/DD/YYYY"
-                                  [formControlName]="input.key"
-                                />
-                                <mat-datepicker-toggle
-                                  matSuffix
-                                  [for]="picker"
-                                ></mat-datepicker-toggle>
-                                <mat-datepicker #picker></mat-datepicker>
-                              </mat-form-field>
-                            </ng-container>
-                          </div>
-                          </form>
-                        </ng-container>
-                      </ng-container>
-                    </div>
-                    <div *ngIf="dataAccordingToDocument.inputFields.length > 0">
-                      <button class="me-2" mat-raised-button color="warn">
-                        Confirm
-                      </button>
-                      <button
-                        mat-stroked-button
-                        color="warn"
-                        (click)="ReportError()"
-                      >
-                        Report Error
-                      </button>
-                    </div>
+                          {{ doc.documentCategory }}
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="mt-4 p-3 third-column">
+              <div class="document">
+                <div class="list-dc">
+                  <ng-container
+                    *ngIf="dataAccordingToDocument.inputFields.length === 0"
+                  >
+                    <div
+                      class="d-flex justify-content-center align-items-center h-100 noInput"
+                    >
+                      <p>Please select at least one document</p>
+                    </div>
+                  </ng-container>
+                  <ng-container
+                    *ngIf="dataAccordingToDocument.inputFields.length > 0"
+                  >
+                    <ng-container
+                      *ngFor="let input of dataAccordingToDocument.inputFields"
+                      ><form [formGroup]="dynamicInputForm">
+                        <div class="">
+                          <ng-container *ngIf="input.type === 'text'">
+                            <mat-form-field class="w-100">
+                              <mat-label>{{ input.name }}</mat-label>
+                              <input
+                                matInput
+                                [type]="input.type"
+                                [formControlName]="input.key"
+                              />
+                              <mat-error
+                                *ngIf="dynamicInputForm.controls[input.key].errors && dynamicInputForm.controls[input.key].errors?.['required']"
+                                >*This field is Required</mat-error
+                              >
+                            </mat-form-field>
+                          </ng-container>
+                          <ng-container *ngIf="input.type === 'Date'">
+                            <mat-form-field class="w-100">
+                              <mat-label>{{ input.name }}</mat-label>
+                              <input
+                                matInput
+                                [matDatepicker]="picker"
+                                placeholder="MM/DD/YYYY"
+                                [formControlName]="input.key"
+                              />
+                              <mat-datepicker-toggle
+                                matSuffix
+                                [for]="picker"
+                              ></mat-datepicker-toggle>
+                              <mat-datepicker #picker></mat-datepicker>
+                              <mat-error
+                                *ngIf="dynamicInputForm.controls[input.key].errors && dynamicInputForm.controls[input.key].errors?.['required']"
+                                >*This field is Required</mat-error
+                              >
+                            </mat-form-field>
+                          </ng-container>
+                        </div>
+                      </form>
+                    </ng-container>
+                  </ng-container>
+                </div>
+                <div
+                  *ngIf="dataAccordingToDocument.inputFields.length > 0"
+                  class="mt-2 d-flex align-items-center"
+                >
+                  <button
+                    class="me-2"
+                    mat-raised-button
+                    color="warn"
+                    (click)="confirmInputFields()"
+                    [ngClass]="buttonLoader ? 'disable' : ''"
+                    [disabled]="buttonLoader"
+                  >
+                    <span *ngIf="!buttonLoader">Confirm</span>
+                    <span class="lod" *ngIf="buttonLoader">
+                      <mat-progress-spinner
+                        diameter="20"
+                        mode="indeterminate"
+                      ></mat-progress-spinner>
+                    </span>
+                  </button>
+                  <button
+                    mat-stroked-button
+                    color="warn"
+                    (click)="openReportErrorDialog()"
+                  >
+                    Report Error
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- </div> -->
+            <!-- </div> -->
           </div>
         </div>
       </div>
@@ -512,7 +534,7 @@
           <div class="document">
             <label>Type of Error</label>
             <div class="col-md-11">
-              <mat-form-field class="col-md-10">
+              <mat-form-field class="col-md-10" class="multi-chips">
                 <mat-select [formControl]="typeOfErrorSelect" multiple>
                   <mat-select-trigger>
                     <mat-chip-list>
@@ -538,26 +560,38 @@
                     {{ category }}
                   </mat-option>
                 </mat-select>
+                <mat-error *ngIf="!typeOfErrorSelect.valid"
+                  >*This field is Required</mat-error
+                >
               </mat-form-field>
-              <!-- <mat-form-field class="col-md-10">
-                <mat-select>
-                  <mat-option *ngFor="let option of options" [value]="option">{{
-                    option
-                  }}</mat-option>
-                </mat-select>
-              </mat-form-field> -->
             </div>
-            <div class="col-md-11 mt-3">
+            <div class="col-md-11 mt-3" [formGroup]="messageForBorrower">
               <span class="mt-1"> Message to Borrower</span>
               <mat-form-field>
                 <!-- <mat-label>Textarea</mat-label> -->
-                <textarea matInput></textarea>
+                <textarea matInput formControlName="message"></textarea>
+                <mat-error
+                  *ngIf="messageForBorrower.controls['message'].errors && messageForBorrower.controls['message'].errors?.['required']"
+                  >*This field is Required</mat-error
+                >
               </mat-form-field>
             </div>
 
-            <div>
-              <button mat-raised-button color="warn" (click)="confirm()">
-                Done
+            <div class="d-flex align-items-center mt-2">
+              <button
+                mat-raised-button
+                color="warn"
+                (click)="handleReportError()"
+                [ngClass]="reportErrorSaveButtonLoader ? 'disable' : ''"
+                [disabled]="reportErrorSaveButtonLoader"
+              >
+                <span *ngIf="!reportErrorSaveButtonLoader"> Done</span>
+                <span class="lod" *ngIf="reportErrorSaveButtonLoader">
+                  <mat-progress-spinner
+                    diameter="20"
+                    mode="indeterminate"
+                  ></mat-progress-spinner>
+                </span>
               </button>
             </div>
           </div>
@@ -572,7 +606,7 @@
         <div class="Documents-cards p-4">
           <div class="row align-items-center">
             <div class="col-md-3">
-              <div class="card">
+              <div class="card mb-3">
                 <div class="d-flex align-items-center">
                   <img class="doc-icon" [src]="verified" alt="" />
                   <div class="doc-text">
@@ -584,7 +618,7 @@
             </div>
 
             <div class="col-md-3">
-              <div class="card">
+              <div class="card mb-3">
                 <div class="d-flex align-items-center">
                   <img class="doc-icon" [src]="unverified" alt="" />
                   <div class="doc-text">
@@ -596,7 +630,7 @@
             </div>
 
             <div class="col-md-3">
-              <div class="card">
+              <div class="card mb-3">
                 <div class="d-flex align-items-center">
                   <img class="doc-icon" [src]="totaldoc" alt="" />
                   <div class="doc-text">
@@ -614,6 +648,7 @@
                   mat-raised-button
                   color="warn"
                   class="px-4"
+                  [disabled]="disableOnNoDocument"
                 >
                   Finish
                 </button>
