--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,20 +9,13 @@
           placeholder="Select Associate"
           (selectionChange)="filterByDataAssociate($event)"
         >
-          <mat-option *ngFor="let option of dataAssociate" [value]="option">{{
-            option
-          }}</mat-option>
+          <mat-option *ngFor="let assoc of dataAssociate" [value]="assoc">
+            {{ assoc }}
+        </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
   </div>
-  <!-- <div class="loader" *ngIf="!loader">
-      <mat-spinner></mat-spinner>
-    </div> -->
-  <!-- <div class="loader-overlay" *ngIf="!loader">
-      <div class="loader-backdrop"></div>
-      <mat-progress-spinner class="loader-spinner" color="primary" mode="indeterminate"></mat-progress-spinner>
-    </div> -->
   <ng-container *ngIf="loader">
     <app-loader></app-loader>
   </ng-container>
@@ -76,7 +69,7 @@
       <td class="mat-cell" colspan="3">No data found</td>
     </tr>
   </table>
-  <ng-container>
+  <ng-container *ngIf="totalDataCount !== 0">
     <mat-paginator
       [pageSizeOptions]="pageSizeOptions"
       [showFirstLastButtons]="false"
